--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-  <% unless current_user.blank? %>
-    <%= current_user.email %>
-    <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-  <% end %>
+  <ul class="hmenu">
+    <%= render 'devise/menu/registration_items' %>
+    <%= render 'devise/menu/login_items' %>
+  </ul>
+  
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
