Able to place products on index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= render 'devise/menu/login_items' %>
   </ul>
 
+  <%= "Hello #{current_user.email}!" unless current_user.blank? %>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
