--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,20 +6,34 @@
   <%= javascript_include_tag "application" %>
   <%= filepicker_js_include_tag %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-  <ul class="hmenu">
-    <%= render 'devise/menu/registration_items' %>
-    <%= render 'devise/menu/login_items' %>
-  </ul>
+  <div class="container">
 
-  <%= "Hello #{current_user.email}!" unless current_user.blank? %>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <a class="brand" href="/">SwoopoClone</a>
+        <ul class="nav nav-pills pull-right">
+          <%= render 'devise/menu/registration_items' %>
+          <%= render 'devise/menu/login_items' %>
+        </ul>
+      </div>
+    </div>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+    <%= notice %>
+    <%= alert %>
+    <form class="form-search pull-right">
+      <input type="text" class="input-medium search-query">
+      <button type="submit" class="btn">Search</button>
+    </form>
 
-  <%= yield %>
+    <p><%= "Hello #{current_user.email}!" unless current_user.blank? %></p>
+
+    <%= yield %>
+
+  </div>
 
 </body>
 </html>
