--- a/app/assets/templates/products/index.jst.ejs
+++ b/app/assets/templates/products/index.jst.ejs
@@ -1,3 +1,57 @@
-<% products.each(function (product) { %>
-  <%= product.escape('title') %>
-<% }); %>
+<div class='row'>
+  <% products.each(function (product) { %>
+    <div class='span4 product'>
+      <div class='productTitle'>
+        <%= product.escape('title') %>
+      </div>
+      <br>
+      <div class='productImage'>
+        <img src="<%= product.escape('main_photo_url') %>">
+      </div>
+      <br>
+      $ <%= product.escape('bid_price') / 100 %>
+      <br>
+      <%= product.escape('current_winner_id') %>
+      <br>
+      <button class='bid_button' data-id="<%= product.escape('id') %>">
+        BID NAO
+      </button>
+    </div>
+  <% }); %>
+
+  <div class='span4 product'>
+    <div class='productTitle'>
+      f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
+    </div>
+    <br>
+    <div class='productImage'>
+      <img src="">
+    </div>
+    <br>
+    $ 0.01
+    <br>
+    1
+    <br>
+    <button class='bid_button' data-id="9001">
+      BID NAO
+    </button>
+  </div>
+
+  <div class='span4 product'>
+    <div class='productTitle'>
+      f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
+    </div>
+    <br>
+    <div class='productImage'>
+      <img src="https://i.chzbgr.com/maxW500/7765397504/h5988EFC1/">
+    </div>
+    <br>
+    $ 0.01
+    <br>
+    1
+    <br>
+    <button class='bid_button' data-id="9002">
+      BID NAO
+    </button>
+  </div>
+</div>
