--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <%= alert %>
     <form class="form-search pull-right">
       <input type="text" class="input-medium search-query">
-      <button type="submit" class="btn">Search</button>
+      <button type="submit" class="btn">Search Auctions</button>
     </form>
 
     <p><%= "Hello #{current_user.email}!" unless current_user.blank? %></p>
