--- a/app/assets/templates/products/index.jst.ejs
+++ b/app/assets/templates/products/index.jst.ejs
@@ -1,5 +1,6 @@
 <div class='row'>
   <% products.each(function (product) { %>
+
     <div class='span4 product'>
       <div class='productTitle'>
         <%= product.escape('title') %>
@@ -17,9 +18,10 @@
         BID NAO
       </button>
     </div>
+
   <% }); %>
 
-  <div class='span4 product'>
+  <div class='span product'>
     <div class='productTitle'>
       f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
     </div>
