--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -5,6 +5,6 @@
 <script type="application/javascript">
   $(function () {
     var productsData = JSON.parse($('#bootstrapped_products_json').html());
-    window.SwoopoClone.initialize($('body'), productsData);
+    window.SwoopoClone.initialize($('#content'), productsData);
   });
 </script>
