Trying to make display mobile-friendly Pt2

--- a/app/assets/templates/products/index.jst.ejs
+++ b/app/assets/templates/products/index.jst.ejs
@@ -1,9 +1,9 @@
 <a href='#/products/new'>New</a>
 
-<div class='row'>
+<div class='row-fluid'>
   <% products.each(function (product) { %>
 
-    <div class='span4 product'>
+    <div class='span product'>
       <div class='productTitle'>
         <%= product.escape('title') %>
       </div>
@@ -41,7 +41,61 @@
     </button>
   </div>
 
-  <div class='span4 product'>
+  <div class='span product'>
+    <div class='productTitle'>
+      f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
+    </div>
+    <br>
+    <div class='productImage'>
+      <img src="https://i.chzbgr.com/maxW500/7765397504/h5988EFC1/">
+    </div>
+    <br>
+    $ 0.01
+    <br>
+    1
+    <br>
+    <button class='bid_button' data-id="9002">
+      BID NAO
+    </button>
+  </div>
+
+  <div class='span product'>
+    <div class='productTitle'>
+      f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
+    </div>
+    <br>
+    <div class='productImage'>
+      <img src="https://i.chzbgr.com/maxW500/7765397504/h5988EFC1/">
+    </div>
+    <br>
+    $ 0.01
+    <br>
+    1
+    <br>
+    <button class='bid_button' data-id="9002">
+      BID NAO
+    </button>
+  </div>
+
+  <div class='span product'>
+    <div class='productTitle'>
+      f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
+    </div>
+    <br>
+    <div class='productImage'>
+      <img src="https://i.chzbgr.com/maxW500/7765397504/h5988EFC1/">
+    </div>
+    <br>
+    $ 0.01
+    <br>
+    1
+    <br>
+    <button class='bid_button' data-id="9002">
+      BID NAO
+    </button>
+  </div>
+
+  <div class='span product'>
     <div class='productTitle'>
       f sdfgr rt hrt htrwetrh ew sd hgetgs sht ewre hwrethr
     </div>
