--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -11,14 +11,18 @@ body { padding-top: 60px; }
   margin-left: -5px;
 }
 
-.row {
-  margin: auto;
+.row-fluid [class*="span"] {
+  margin-left: 1px;
+  margin-right: 3px;
+}
+
+.row-fluid [class*="span"]:first-child {
+  margin-left: 1px;
+  margin-right: 3px;
 }
 
 [class*="span"] {
-  margin-bottom: 10px;
-  margin-left: 15px;
-  margin-right: -5px;
+  margin-bottom: 4px;
 }
 
 #content {
@@ -26,7 +30,8 @@ body { padding-top: 60px; }
 }
 
 .product {
-  width:230px;
+  min-width:230px;
+  max-width:230px;
   height:250px;
   text-align:center;
   border:1px solid #585858;
