--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -3,6 +3,8 @@
 </script>
 
 <script type="application/javascript">
+  var AWSBucket = '<%= ENV['AWSBucketURL'] %>';
+
   $(function () {
     var productsData = JSON.parse($('#bootstrapped_products_json').html());
     window.SwoopoClone.initialize($('#content'), productsData);
