Fix minor bug: variable's ghost

--- a/app/assets/templates/products/new.jst.ejs
+++ b/app/assets/templates/products/new.jst.ejs
@@ -5,8 +5,7 @@
   <br><br>
 
   <label for='product_main_photo_url'>Main Photo</label>
-  <input type='text' id='product_main_photo_url' name='product[main_photo_url]'
-  value='<%= photoURL %>'>
+  <input type='text' id='product_main_photo_url' name='product[main_photo_url]'>
   <br>
   <button id="product_main_photo_button" type="button">
     Pick File
