--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <a class="brand" href="/">SwoopoClone</a>
+        <a class="brand" href="/">Swindle</a>
         <ul class="nav nav-pills pull-right">
           <%= render 'devise/menu/registration_items' %>
           <%= render 'devise/menu/login_items' %>
