--- a/app/assets/templates/products/new.jst.ejs
+++ b/app/assets/templates/products/new.jst.ejs
@@ -19,24 +19,21 @@
     Or drop files here
   </div-->
 
-  <br><br>
+  <!-- Below capability in future -->
 
-  <label for='product_bid_price'>Initial Bid Price</label>
-  <input type='text' id='product_bid_price' name='product[bid_price]'>
-
-  <br><br>
-
-  <label for='product_bid_end_date'>Bid End Date</label>
-  <input type='date' id='product_bid_end_date' name='bid_end[date]'>
-
-  <br><br>
-
-  <label for='product_bid_end_time'>Bid End Time</label>
-  <input type='time' id='product_bid_end_time' name='bid_end[time]'>
+  <!--brbr-->
+  <!--label for='product_bid_price'Initial Bid Price/label-->
+  <!--input type='text' id='product_bid_price' name='product[bid_price]'-->
+  <!--brbr-->
+  <!--label for='product_bid_end_date'Bid End Date/label-->
+  <!--input type='date' id='product_bid_end_date' name='bid_end[date]'-->
+  <!--brbr-->
+  <!--label for='product_bid_end_time'Bid End Time/label-->
+  <!--input type='time' id='product_bid_end_time' name='bid_end[time]'-->
 
   <br><br>
 
-  <label for='product_fixed_price'>Fixed Price</label>
+  <label for='product_fixed_price'>Price</label>
   <input type='text' id='product_fixed_price' name='product[fixed_price]'>
 
   <br><br>
