--- a/app/views/root/root.html.erb
+++ b/app/views/root/root.html.erb
@@ -7,6 +7,6 @@
 
   $(function () {
     var productsData = JSON.parse($('#bootstrapped_products_json').html());
-    window.SwoopoClone.initialize($('#content'), productsData);
+    window.Swindle.initialize($('#content'), productsData);
   });
 </script>
