--- a/app/assets/stylesheets/root.css.scss
+++ b/app/assets/stylesheets/root.css.scss
@@ -3,26 +3,30 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import 'bootstrap';
 
-body { padding-top: 60px; }
+body { padding-top: 40px; }
 
 @import 'bootstrap-responsive';
 
 .navbar .brand {
-  margin-left: -5px;
+  margin-left: 0px;
+}
+
+.pull-right {
+  margin-right: 0px;
 }
 
 .row-fluid [class*="span"] {
-  margin-left: 1px;
-  margin-right: 3px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .row-fluid [class*="span"]:first-child {
-  margin-left: 1px;
-  margin-right: 3px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 [class*="span"] {
-  margin-bottom: 4px;
+  margin-bottom: 20px;
 }
 
 #content {
@@ -30,27 +34,38 @@ body { padding-top: 60px; }
 }
 
 .product {
-  min-width:230px;
-  max-width:230px;
-  height:250px;
+  min-width:183px;
+  max-width:183px;
+  height:304px;
   text-align:center;
   border:1px solid #585858;
 }
 
+/* Change padding-top to 13px when converting to auction site */
 .productTitle {
-  padding-top:5px;
+  padding-top:25px;
   margin:auto;
-  width:210px;
+  width:183px;
   height:25px;
+  font-size:11px;
+  line-height:14px;
+  color:#000;
+  font-family:Arial;
 }
 
 .productImage {
   margin:auto;
-  width:210px;
-  height:110px;
+  width:164px;
+  max-height:115px;
   align:center;
 }
 
 .productImage img {
-  max-height:110px;
+  max-height:115px;
+}
+
+.productPrice {
+  font-size:18px;
+  color:#32CD32;
+  font-weight:bold;
 }
