Fix product/show template; hide hard-coded product (for now...)

--- a/app/assets/templates/products/index.jst.ejs
+++ b/app/assets/templates/products/index.jst.ejs
@@ -39,27 +39,29 @@
 
   <% }); %>
 
-  <div class='span product'>
-    <div class='productTitle'>
-      Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
-    </div>
+  <script>
+//  <div class='span product'>
+//    <div class='productTitle'>
+//      Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
+//    </div>
 
-    <br>
+//    <br>
 
-    <div class='productImage'>
-      <img src="http://girlchasesglobe.com/shannon/wp-content/uploads/2012/12/Peekaboo_Giraffe.jpg">
-    </div>
+//    <div class='productImage'>
+//      <img src="http://girlchasesglobe.com/shannon/wp-content/uploads/2012/12/Peekaboo_Giraffe.jpg">
+//    </div>
 
-    <br>
+//    <br>
 
-    <div class='productPrice'>
-      $0.68
-    </div>
+//    <div class='productPrice'>
+//      $0.68
+//    </div>
 
-    <br>
+//    <br>
 
-    <button>
-      Quick-Add to Cart
-    </button>
-  </div>
+//    <button>
+//      Quick-Add to Cart
+//    </button>
+//  </div>
+  </script>
 </div>
