--- a/app/assets/templates/products/show.jst.ejs
+++ b/app/assets/templates/products/show.jst.ejs
@@ -1,16 +1,26 @@
 <h2><%= product.escape('title') %></h2>
 
 <div class='row-fluid'>
-  <div class='span6'>
-    <img src="<%= product.escape('main_photo_url') %>">
+  <img src="<%= product.escape('main_photo_url') %>">
+</div>
+
+<div class='row-fluid'>
+  <div class='span4'>
     <%= product.escape('description') %>
   </div>
 
-  <div class='span6' align='right'>
-    $<%= (product.escape('fixed_price') / 100).toFixed(2) %>
-    <br>
-    <button class='add_to_cart_button' data-id="<%= product.escape('id') %>">
-      Add to Cart
-    </button>
+  <div class='span2'>
+    <div class='span1'>
+      Price:
+      <br>
+    </div>
+
+    <div align='right'>
+      $<%= (product.escape('fixed_price') / 100).toFixed(2) %>
+      <br>
+      <button class='add_to_cart_button' data-id="<%= product.escape('id') %>">
+        Add to Cart
+      </button>
+    </span>
   </div>
 </div>
