--- a/app/assets/templates/products/show.jst.ejs
+++ b/app/assets/templates/products/show.jst.ejs
@@ -5,18 +5,21 @@
 </div>
 
 <div class='row-fluid'>
-  <div class='span4'>
+  <div class='span4 detail_words'>
     <%= product.escape('description') %>
   </div>
 
-  <div class='span2'>
-    <div class='span1'>
+  <div class='span2 offset1'>
+    <div class='span1 detail_words'>
       Price:
       <br>
     </div>
 
     <div align='right'>
-      $<%= (product.escape('fixed_price') / 100).toFixed(2) %>
+      <div class='productPrice'>
+        $<%= (product.escape('fixed_price') / 100).toFixed(2) %>
+      </div>
+
       <br>
       <button class='add_to_cart_button' data-id="<%= product.escape('id') %>">
         Add to Cart
