Add items to cart; need to display cart

--- a/app/assets/templates/products/new.jst.ejs
+++ b/app/assets/templates/products/new.jst.ejs
@@ -44,11 +44,11 @@
   <br><br>
 
   <input type='hidden' name='product[seller_id]' value='1'>
-  <input type='hidden' name='product[current_winner_id]' value='1'>
+  <!--input type='hidden' name='product[current_winner_id]' value='1'-->
   <button class='submit'>New Product</button>
 </form>
 
-<script>
+<!--script>
   $('#product_bid_end_date').datepicker();
   $('#product_bid_end_time').timepicker();
-</script>
+</script-->
