--- a/app/assets/templates/products/show.jst.ejs
+++ b/app/assets/templates/products/show.jst.ejs
@@ -1,7 +1,7 @@
 <h2><%= product.escape('title') %></h2>
 
 <div class='row-fluid'>
-  <img src="<%= product.escape('main_photo_url') %>">
+  <img class='productImage' src="<%= product.escape('main_photo_url') %>">
 </div>
 
 <div class='row-fluid'>
