--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <li><a>Account</a></li>
           <% end %>
 
-          <li><%= link_to 'Cart', cart_url %></li>
+          <li><%= link_to 'Cart', '#/cart' %></li>
           <%= render 'devise/menu/login_items' %>
 
         </ul>
